--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 [dependencies]
 kobject-uevent = "0.1.1"
 netlink-sys = "0.8.6"
+
+[profile.release]
+opt-level = "s"  
+lto = true
+strip = true
+panic = 'abort'
